--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
+<head> 
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
-  <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <link rel="shortcut icon" href="img/chimmy.ico">
+  <meta name="description" content="Alyssa Miyasato's Resume">
+  <meta name="author" content="862282405">
 
-  <title>John Doe - Business Administration</title>
+  <title>Alyssa Miyasato - Creative Writer</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Alyssa Miyasato</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/AlyssaMiyasato (1).png" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,28 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Alyssa Miyasato
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">Creative Writing</div>
+        <p class="lead mb-4">Alyssa Miyasato is a first-year student attending the University of California, Riverside and is majoring in Creative Writing and has an interest in Media and Cultural Studies. In Middle and High School, Alyssa participated in Color Guard and was the captain of her Middle School’s Colorguard team. Alyssa has great leadership experience and works well with others. In High School, Alyssa participated in Color Guard for 4 years and was in the Polynesian Cultural Club. Alyssa had to learn and master how to balance her extracurricular activities and her academic life. Alyssa was very successful in High School with her academics, being in her High School’s National Honor Society, and graduating with honors and a 4.0 GPA. In her Junior Year of High School, Alyssa had to pay herself for her own fair share, in order to continue to participate in Color Guard. Therefore over the Summer, she worked a part-time job at the Aquarium of the Pacific as a food runner. Every shift, Alyssa worked in a different position. She went from working at the coffee cart to being a prep cook to being a server at the restaurant. Alyssa has learned to quickly adapt to new surroundings, environments, and people, making her versatile. This experience has prepared Alyssa for her current part-time job. 
+<br><br>
 
-        Enter bio here<br><br>
+         Alyssa is currently working as a cashier at the fast-food restaurant Farmer Boys, and while pursuing her academic studies and being a full-time student. Alyssa has a background in customer service and foodservice. Alyssa has accounting, customer service, and leadership skills that have been developed while working in her current part-time job. Alyssa has worked with many diverse people and has an easy time making new acquantinces. She has resolved many conflicts with customers in a responsible, reasonable, and friendly fashion and makes it her responsibility to make the customer feel at ease and calm. She is very dedicated and hard-working and is always willing to help out. She helps her friends out whenever she can, covers her friend’s shifts, and stays longer at work to help her coworkers through the rushes.<br><br>
 
-        Enter bio here
+        Alyssa has always loved writing and wants to write stories that inspire others, especially Asian Americans. Alyssa has written pieces of poetry, nonfiction, and fiction that has sent and evaluated to different magazines in hopes to be published. Alyssa is also part of the University of California, Riverside’s Gamma Beta Phi National Honor Society for her exceptional academic standings. Alyssa has done hours of community service and maintains a high and stable GPA. 
+
         </p>
         <div class="social-icons">
-          <a target="_blank" id="socialicon-1" href="https://linkedin.com">
+          <a target="_blank" id="socialicon-1" href="https://www.linkedin.com/in/alyssamiyasato/">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" id="socialicon-2" href="https://github.com">
+          <a target="_blank" id="socialicon-2" href="https://github.com/AlyssaMiyasato">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="socialicon-3" href="https://twitter.com">
+          <a target="_blank" id="socialicon-3" href="https://twitter.com/alyssamiyasato">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" id="socialicon-4" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="socialicon-4" href="mailto:amiya018@gmail.com">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,48 +94,48 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
-            <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
-            </p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
-          <div class="resume-content">
             <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Whole Foods</a></div>
+            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Farmer Boys</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Has worked in a team environment<br> 
+              • Has experience with customer service<br>
+              • Experience in leadership, communication, accounting, and customer service.<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">July 2021 - Present</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
+          <div class="resume-content">
+            <h3 class="mb-0">Member of the National Honor Society</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Gamma Beta Phi</a></div>
+            <p>
+              • Responsible maintaining an exceptional academic standing. <br>
+              • Has backgrounds of doing community service and helping others and the planet. <br>
+            </p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">January 2022 - Present</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">Captain of a Sport's Team</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">Colorguard Team</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • Ran practices and led technique blocks<br>
+            • Created itinerary's for competitions<br>
+            • Resolved any issues between members of the team.<br>
+            • Ensured everything was prepared and packed before competitions<br>
 
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">October 2016 - May 2017</span>
           </div>
         </div>
 
@@ -152,33 +154,22 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <div class="subheading mb-3">Future Bachelor in Creative Writing</div>
+            <div>Pursuing the Creative Writing major. </div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
+            <span class="text-primary">June 2025</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
+            <h3 class="mb-0">Ayala High School</h3>
+            <div class="subheading mb-3">Acquired a High School Diploma</div>
+            <div>Graduated Ayala High School in May of 2021</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
+            <span class="text-primary">May 2021</span>
           </div>
         </div>
 
@@ -189,9 +180,13 @@
 
     <section class="resume-section p-1 p-lg-5 d-flex align-items-center" id="portfolio">
       <div class="w-100">
-        <h2 class="mb-5">Portfolio</h1>
-        <center>
-            <img src="img/image2.jpeg" width="500px">
+            <h2 class="mb-5">Portfolio</h1>
+<center>
+    <img src="img/gbp.jpg" width="500px">
+    <img src="img/temple.jpg" width="500px"><br>
+    <img src="img/sunset.JPG" width="500px">
+    <img src="img/belltower.jpg" width="500px"><br>
+</center>
         </center>
       </div>
     </section>
@@ -199,7 +194,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Alyssa Miyasato</center><br>
   </div>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
